--- a/style.css
+++ b/style.css
@@ -373,60 +373,88 @@ header {
   color: var(--base-blue);
 }
 
-.rewards {
-  position: relative;
-  padding: 30px;
-  margin-bottom: 300px;
+.rewards-block {
+  padding: 0 20rem;
 }
 
-.rewards-text {
+.rewards {
+}
+
+.rewards__text {
   color: var(--base-blue);
   display: flex;
-  align-items: center;
-  gap: 40px;
+  justify-content: space-between;
 }
 
-.rewards-photo {
+.rewards__text .head {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+
+.rewards__text .year {
+  align-content: center;
+}
+
+.rewards__photo {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 30px;
+  gap: 3rem;
   background-color: var(--light-blue);
-  border-radius: 60px;
+  border-radius: 6rem;
   background: white;
 }
 
-.rewards-photo-png {
-  width: clamp(300px, 35vw, 600px);
+.rewards__photo__image {
+  width: clamp(30rem, 35vw, 60rem);
   height: auto;
 }
 
-.rewards-photo-background {
+.rewards__photo__background {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: var(--light-blue);
-  border-radius: 60px;
+  border-radius: 6rem;
   background: white;
 }
 
-.rewards-photo-background-border {
-  padding: 30px;
+.rewards__photo__background-border {
+  padding: 3rem;
   background: var(--light-blue);
-  border-radius: 60px;
+  border-radius: 6rem;
 }
 
-.rewards-photo-text {
-  padding: 30px;
+.rewards__photo__background__text {
+  padding: 5rem;
   color: var(--base-blue);
 }
 
-.rewards-photo-text h3 {
-  font-size: clamp(25px, 2vw, 45px);
+.rewards__photo__background__text p:nth-child(1) {
+  font-size: 1.6rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+.rewards__photo__background__text p:nth-child(2) {
+  font-size: 4.5rem;
+  font-weight: 500;
+  line-height: 120%;
+  margin-bottom: 2rem;
 }
 
-.rewards-photo-text p {
-  font-size: clamp(12px, 1.2vw, 20px);
+.rewards__photo__background__text p:nth-child(3) {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 120%;
+  width: 50%;
+  margin-bottom: 5rem;
+}
+
+.rewards__photo__background__text:nth-child(4) {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 120%;
 }
 
 .programs-text {
