--- a/style.css
+++ b/style.css
@@ -575,82 +575,67 @@ header {
   left: 50%;
 }
 
+.discounts-block {
+  padding: 0 20rem;
+}
+
 .discounts {
   position: relative;
   overflow: visible;
-  margin-bottom: clamp(400px, 28vw, 500px);
+  margin-bottom: 20rem;
   color: white;
 }
 
-.discounts-background-image,
-.order-background-image,
-.rewards-background-image {
-  position: absolute;
-  top: -100px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: -1;
+.discounts__photos {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
 }
 
-.rewards-background-image {
-  height: clamp(800px, 70vw, 1100px);
-}
-
-.discounts-background-image {
-  height: clamp(700px, 60vw, 1000px);
-}
-
-.order-background-image {
-  height: clamp(700px, 60vw, 1000px);
-}
-
-.discounts-text {
+.discounts__text {
   display: flex;
   align-items: center;
-  gap: 40px;
+  gap: 3rem;
   color: var(--base-blue);
+  margin-bottom: 10rem;
 }
 
-.discounts-photos-card-png {
-  width: clamp(200px, 20vw, 350px);
-  height: clamp(200px, 20vw, 350px);
+.discounts__photos__card-image {
+  width: clamp(20rem, 20vw, 35rem);
+  height: clamp(20rem, 20vw, 35rem);
   object-fit: cover;
-  border-radius: 35px;
+  border-radius: 3.5rem;
   filter: brightness(70%);
 }
 
-.discounts-photos-card {
+.discounts__photos__border {
+  padding: 2rem;
+  border-radius: 5rem;
+  background-color: var(--light-blue);
+}
+
+.discounts__photos__card {
   position: relative;
 }
 
-.discounts-photos-card-text-up {
+.discounts__photos__card__text-up {
   position: absolute;
   top: 0;
   padding: 30px;
 }
 
-.discounts-photos-card-text-up p.text-16 {
-  font-size: clamp(12px, 1vw, 16px);
-}
-
-.discounts-photos-card-text-down {
+.discounts__photos__card__text-down {
   position: absolute;
   bottom: 0;
   padding: 30px;
 }
 
-.discounts-photos-card-text-svg {
+.discounts__photos__card__text-image {
   position: absolute;
   top: 10px;
   right: 0;
   padding: 30px;
-}
-
-.discounts-photos {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 30px;
 }
 
 .comment {
