--- a/style.css
+++ b/style.css
@@ -707,6 +707,10 @@ header {
   margin: 0;
 }
 
+.order__form__block a {
+  color: var(--red);
+}
+
 .order__form__text {
   border-radius: 6rem;
   padding: 0.5rem 1.5rem;
@@ -801,17 +805,10 @@ header {
   margin-bottom: 1rem;
 }
 
-.location__address__tag__image {
-}
-
 .location__address__tag {
   display: grid;
   grid-template-columns: 3rem 15rem;
   gap: 1rem;
-}
-
-.location__address__tag .street {
-  width: 90%;
 }
 
 .location__address__bus p:nth-child(1) {
@@ -822,32 +819,46 @@ header {
 
 /*Footer*/
 
-.footer {
-  padding-top: 5rem;
-  width: 100vw;
+.footer-block {
   background: white;
+  padding: 10rem 15rem 0 15rem;
 }
 
-.footer-common {
+.footer__common {
   display: flex;
-  justify-content: space-around;
+  gap: 15rem;
+  justify-content: space-between;
   margin-bottom: 12rem;
 }
-.footer h4 {
-  margin-bottom: 2rem;
-}
-.footer-way {
+.footer__common__way {
   display: flex;
   flex-direction: column;
+  width: 20%;
   gap: 2rem;
   align-items: start;
 }
-.footer-way p {
-  font-size: 1.6rem;
+
+.footer__common__way__logo {
+  width: 8vw;
 }
-.footer-copyright {
+
+.footer__common__contacts,
+.footer__common__client {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.footer__common__contacts p:nth-child(1),
+.footer__common__client p:nth-child(1) {
+  font-size: 2.4rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+.footer__common_copyright {
+  display: flex;
+  gap: 15rem;
+  justify-content: space-between;
 }
 
 /*Media requests*/
