--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ header {
   z-index: 1;
 }
 
+.mobile-slogan {
+  display: none;
+}
+
 .head-text {
   font-size: 9rem;
   font-weight: 700;
@@ -686,7 +690,7 @@ header {
 .order__text {
   display: flex;
   align-items: center;
-  gap: 30px;
+  gap: 2rem;
   margin-bottom: 5rem;
 }
 
@@ -901,11 +905,17 @@ header {
     font-size: 1.2rem;
   }
   .preview__slogan {
+    display: none;
+  }
+  .mobile-slogan {
+    display: block;
     font-size: 4rem;
+    font-weight: 700;
     line-height: 110%;
   }
   .preview__desc {
     font-size: 1.2rem;
+    width: 100%;
   }
   .description-block,
   .company-block,
@@ -924,7 +934,7 @@ header {
 
   .company-block {
     padding: 10rem 2rem;
-    height: 170vw;
+    height: 188vw;
   }
 
   .company__text {
@@ -934,6 +944,14 @@ header {
   .company__info {
     display: flex;
     flex-direction: column;
+  }
+
+  .company__info__block__about p:nth-child(1) {
+    font-size: 2.5rem;
+  }
+  .company__info__block__about p:nth-child(2),
+  .company__info__block__about p:nth-child(3) {
+    font-size: 1.2rem;
   }
   .company__info__block__members__avatar {
     width: 15vw;
@@ -956,7 +974,7 @@ header {
 
   .rewards__photo__image {
     border-radius: 3rem;
-    width: 100%;
+    width: 83vw;
   }
 
   .rewards__photo__background-border {
@@ -968,7 +986,9 @@ header {
     border-radius: 3rem;
     flex-direction: column;
   }
-
+  .rewards__photo__background__text {
+    padding: 0.7rem;
+  }
   .rewards__photo__background__text p:nth-child(1),
   .rewards__photo__background__text p:nth-child(3),
   .rewards__photo__background__text p:nth-child(4) {
@@ -984,14 +1004,21 @@ header {
   }
 
   .programs-block {
-    padding: 0;
+    padding: 0 1rem;
+  }
+
+  .easy-start,
+  .flow-rider {
+    display: block;
+    width: 90vw;
   }
 
   .easy-start__border,
   .flow-rider__border {
     margin: 0;
+    padding: 2rem;
     border-radius: 3rem;
-    width: 75vw;
+    width: 80vw;
   }
   .easy-start__border-image,
   .flow-rider__border-image {
@@ -1027,16 +1054,22 @@ header {
     font-weight: 500;
   }
 
+  .easy-start__info,
+  .flow-rider__info {
+    gap: 1rem;
+  }
+
   .easy-start__info__course__image,
   .easy-start__info__lesson__image,
   .flow-rider__info__course__image,
   .flow-rider__info__lesson__image {
-    width: 5rem;
+    width: 4rem;
   }
 
   .easy-start__description__mark,
   .flow-rider__description__mark {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    gap: 1rem;
   }
 
   .easy-start__price-old,
@@ -1079,7 +1112,7 @@ header {
   }
 
   .order-block {
-    height: 240vw;
+    height: 310vw;
     padding: 10rem 2rem;
     background-position: 30% 30%;
   }
@@ -1112,7 +1145,7 @@ header {
   }
 
   .location-block {
-    width: 90vw;
+    width: 88vw;
   }
 
   .location__text {
@@ -1125,7 +1158,7 @@ header {
   .location__address {
     display: grid;
     padding: 0;
-    grid-template-columns: repeat(1, 36rem);
+    grid-template-columns: repeat(1, clamp(28rem, 80vw, 36rem));
     grid-template-rows: repeat(3, 8rem);
     gap: 0;
     background: none;
@@ -1165,6 +1198,7 @@ header {
 
   .location__address__route__tag {
     font-size: 1.2rem;
+    width: 40%;
   }
   .location__address__route__tag .street {
     width: 70%;
@@ -1188,6 +1222,7 @@ header {
   .footer__common {
     display: flex;
     justify-content: space-around;
+    gap: 0;
   }
 
   .footer__common__way {
